tests/snapshots/gql_snapshots__parse_substring_function_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
let_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        FunctionCall:
          name: substring
          args:
            - Property:
                variable: p
                property: name
            - Literal:
                Int: 0
            - Literal:
                Int: 3
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
