tests/snapshots/gql_snapshots__parse_tointeger_function_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        FunctionCall:
          name: toInteger
          args:
            - Property:
                variable: p
                property: jersey_number
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
