tests/snapshots/gql_snapshots__parse_upper_function_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
let_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        FunctionCall:
          name: upper
          args:
            - Property:
                variable: p
                property: name
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
