tests/snapshots/gql_snapshots__parse_variable_length_exact_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: a
            labels: []
            properties: []
        - Edge:
            variable: ~
            labels: []
            direction: Outgoing
            quantifier:
              min: 2
              max: 2
            properties: []
        - Node:
            variable: b
            labels: []
            properties: []
optional_match_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: b
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
